--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ body{
 <body>
 
 <header id="showcase">
-    <h1>bio</h1>
+    <h1>Bio</h1>
     <p>splash landing</p>
-    <a href="#" class="button">read more</a>
+    <a href="#" class="button">Read More</a>
 	
   </header>
   <section id="section-a">
