--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body{
 #showcase .button:hover{
   background: #669999;
   color:#fff;
+  filter: opacity(45%) drop-shadow(16px 16px 20px red) invert(75%);	
 }
 
 #section-a{
